--- a/figs/ibid-lazysp-plot.tex
+++ b/figs/ibid-lazysp-plot.tex
@@ -159,8 +159,8 @@ lambda meanpm
    %xmin=0,xmax=95,
    %xtick pos=bottom,
    %symbolic y coords={E, F, R, A, B, W, P},
-   %xticklabels from table={\datainit}{barname},
-   %xtick=data,
+   xticklabels from table={\datalpastar}{lambda},
+   xtick=data,
    xtick pos=left,
    ymajorgrids,
    %xmajorticks=false,
@@ -170,7 +170,7 @@ lambda meanpm
    ylabel={Total Search Time (s)},
    ylabel near ticks,
    ylabel shift=-0.2cm,
-   xlabel={LazySP Problem (by DynamicSP Heuristic Strength)},
+   xlabel={LEMUR $\lambda_U$},
    legend pos=north west,
    x dir=reverse,
    %reverse legend,
